--- a/default/env.template
+++ b/default/env.template
@@ -1,4 +1,5 @@
 # Environment variable template for login automation
-LOGIN_URL=https://your-login-endpoint.com/api/login
+# Copy to .env and fill with actual values (do NOT commit real secrets)
+LOGIN_URL=https://your-login-url.com/api/login
 LOGIN_EMAIL=your-email@example.com
 LOGIN_PASSWORD=your-secure-password
